# rsysaas

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  api_gateway.json  build.rs  data_gateway.json  database.sqlite-shm  database.sqlite-wal  docker-compose.yml  locustfile.py  minify.sh  movies.ipynb  movies.sql  populate-redis.sh  prueba.py  server.json  test_api.py
app/: Cargo.toml
app/src/: api_docs.rs  customer.rs  lib.rs  routes.rs
app/src/data/: mod.rs  models.rs
app/src/data/ingestion/: custom.rs  prestashop.rs  routes.rs  shopify.rs
app/src/recommendation/: api.rs  mod.rs
app/tests/: common.rs  integration.rs  recommendations_test.rs
app/tests/ingestion_test/: custom_test.rs
aromatic/: Cargo.toml
aromatic/src/: cli.rs  lib.rs  migrations.rs  orm.rs
assets/: embed-widget.js  og-embed-widget.js  test-embed-widget.js
envy/: Cargo.toml
envy/src/: lib.rs
migrations/: 1_initial.sql  2_base.sql
migrations/customer/: 1_initial.sql
migrations/events/: 1_initial.sql
migrations/postgres/: initial.sql
migrations/principal/: 1_initial.sql  2_customers.sql  3_mock_data.sql  3_test_data.sql
migrations/sessions/: 1_initial.sql
migrations/sqlite/: 0_initial.sql  1_initial.sql  2_test_data.sql  initial.sql
models/: Cargo.toml
models/src/: customer.rs  lib.rs  user.rs
models/src/invfin/: association.rs  company.rs  mod.rs  term.rs
orm/: Cargo.toml
orm-macros/: Cargo.toml
orm-macros/src/: lib.rs
orm/src/: lib.rs  manager.rs
orm/src/models/: customer.rs  user.rs
orm/src/models/invfin/: association.rs  company.rs  term.rs
proto/: recommendation.proto
src/: api_docs.rs  cli.rs  customer.rs  lib.rs  main.rs  routes.rs  utils.rs
src/api_gateway/: api_docs.rs  mod.rs  routes.rs
src/api_gateway/auth/: dtos.rs  mod.rs  routes.rs  services.rs
src/api_gateway/core/: views.rs
src/api_gateway/ingestion/: applications.rs  dtos.rs  mod.rs  routes.rs
src/api_gateway/integration/: controllers.rs  mod.rs  models.rs  views.rs
src/api_gateway/recommendation/: mod.rs  routes.rs
src/api_gateway/shopify/: mod.rs
src/api_gateway/shopify/auth/: applications.rs  mod.rs  routes.rs
src/api_gateway/shopify/controllers/: auth.rs  graphql.rs
src/api_gateway/shopify/views/: auth.rs  mod.rs  webhooks.rs
src/api_gateway/shopify/webhooks/: applications.rs  dtos.rs  mod.rs  routes.rs
src/background_tasks/: core.rs  mod.rs
src/business/: adapter.rs  auth.rs  entities.rs  facade.rs  interface.rs  mod.rs  models.rs  recommendations.rs  requests.rs  throttling.rs  ulid.rs  utils.rs  versioning.rs
src/business/entities/: mod.rs  recommendations.rs
src/core/: auth.rs  mod.rs
src/core/dashboard/views/: mod.rs  seo.rs  views.rs
src/dashboard/: mod.rs  seo.rs  views.rs
src/data/: cache.rs  db.rs  entities.rs  errors.rs  etc.rs  examples.rs  interface.rs  managers.rs  mod.rs  models.rs  orm.rs
src/data/core/: controllers.rs  views.rs
src/data/core/models/: products.rs
src/data/facades/: db.rs
src/data/ingestion/: custom.rs  interface.rs  mod.rs  prestashop.rs  routes.rs  shopify.rs
src/data/ingestion/shopify/: auth.rs  graphql.rs  mod.rs  products.rs  webhooks.rs
src/data/interfaces/: cache.rs  db.rs
src/data/manipulation/: products.rs
src/data/models/: complements.rs  customer.rs  mod.rs  products.rs  recommendation.rs  requests.rs  token.rs  user.rs
src/data/models/invfin/: association.rs  company.rs  mod.rs  sectors_industries.rs  term.rs
src/data/shopify/: graphql.rs  mod.rs
src/data/shopify/controllers/: auth.rs  mod.rs  webhooks.rs
src/data/shopify/models/: auth.rs  webhooks.rs
src/data/shopify/views/: auth.rs  webhooks.rs
src/data_gateway/: api_docs.rs  mod.rs  routes.rs
src/data_processing/: core.rs  mod.rs
src/data_processing/prestashop/: mod.rs
src/entities/: customers.rs  errors.rs  events.rs  mod.rs  products.rs
src/entities/facades/: db.rs  mod.rs  view.rs
src/entities/interfaces/: db.rs  view.rs
src/entities/models/: customer.rs  user.rs
src/entities/models/invfin/: association.rs  company.rs  term.rs
src/models/: messages.rs
src/rec_service/: dtos.rs  entities.rs  gateways.rs  mod.rs  movies.rs  skate.rs
src/recommendation/: api.rs
src/recsys/: mod.rs  models.rs
src/server/: api_docs.rs  auth.rs  config.rs  mod.rs  responses.rs  router.rs  state.rs  tracing.rs  versioning.rs
src/web/: facade.rs  forms.rs  interface.rs  middlewares.rs  mod.rs  models.rs  requests.rs  responses.rs  routes.rs  utils.rs  versioning.rs
src/web/requests/: mod.rs  query.rs  recommendation.rs
src/web/views/: api.rs  mod.rs  regular.rs  sse.rs  ws.rs
src/webservice/: mod.rs  models.rs  rest.rs  routes.rs
src/website/: mod.rs
src/website/public/: mod.rs  seo.rs
src/website/public/auth/: routes.rs
src/website/public/dashboard/: admin.rs  routes.rs
src/website/public/routes/: mod.rs
templates/: deep-base.html  deep-kid.html  deep-mid.html  import_data.html  index.html  macro.html  test.html
templates/auth/: login.html  register.html
templates/base/: base.html  meta.html  scripts.html
templates/components/: card.html
templates/dashboard/: index.html  sidebar.html
templates/layout/: footer.html  index.html  navbar.html  sidebar.html
tests/: common.rs  mod.rs  recommendations_test.rs
tests/api_gateway/: auth_test.rs  common.rs  ingestion_test.rs  mod.rs  recommendations_test.rs  shopify_test.rs
tests/data_tests/: mod.rs  shopify_test.rs
tests/ingestion_test/: custom_test.rs  mod.rs  shopify_test.rs
tests/populate_db/: 1_users.sql  2_base.sql
(+8 files in other folders)
