[package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/rsysaas"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
name = "webservice"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }

axum = { version = "0.7.5", features = ["multipart", "json", "query", "http2", "macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }

utoipa = { version = "=5.0.0-beta.0", features = ["axum_extras", "chrono", "decimal"] }
utoipa-scalar = { version = "=0.2.0-alpha.0", features = ["axum"] }
utoipauto = "0.1.11"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

chrono = "0.4.23"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio", "tls-rustls"]}
jsonwebtoken = "9"
argon2 = "0.5.3"
maxminddb = "0.24.0"
hmac = "0.12.1"
sha2 = "0.10.8"

[profile.release]
opt-level = "z"  # Use the highest optimization level for production builds
lto = true       # Enable Link Time Optimization for better performance
panic = "abort"  # Abort on panic to prevent unwinding overhead
debug = false    # Disable debug symbols to reduce binary size
strip = "symbols"


[profile.dev]
debug = true     # Enable debug symbols for development builds
