[package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/rsysaas"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
name = "webservice"

[dependencies]
app = { path = "./app" }
stefn = { path = "../stefn" }

[profile.release]
opt-level = "z"  # Use the highest optimization level for production builds
lto = true       # Enable Link Time Optimization for better performance
panic = "abort"  # Abort on panic to prevent unwinding overhead
debug = false    # Disable debug symbols to reduce binary size
strip = "symbols"


[profile.dev]
debug = true     # Enable debug symbols for development builds
