[package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/rsysaas"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
name = "rsysaas"

[dependencies]
stefn = { path = "../stefn" }
tokio = { version = "1.38.0", features = ["full"] }

axum = { version = "0.7.5", features = ["multipart", "json", "query", "http2", "macros", "tracing", "ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
hyper = { version = "1.3.1", features = ["full"] }

utoipa = { version = "=5.0.0", features = ["axum_extras", "chrono", "decimal"] }
utoipa-rapidoc = { version = "5", features = ["axum"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

chrono = "0.4.23"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = { version = "1.0.132", features = ["std"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "tls-rustls"]}
jsonwebtoken = "9"
argon2 = "0.5.3"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
menva = { version = "1.1.0", path = "../../menva" }
bigdecimal = "0.4"
tokio-stream = "0.1.16"
futures = "0.3.31"


[dev-dependencies]
http-body-util = "0.1.0"

[profile.release]
opt-level = "z"  # Use the highest optimization level for production builds
lto = true       # Enable Link Time Optimization for better performance
panic = "abort"  # Abort on panic to prevent unwinding overhead
debug = false    # Disable debug symbols to reduce binary size
strip = "symbols"


[profile.dev]
debug = true     # Enable debug symbols for development builds
