[package]
name = "aromatic"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/rsysaas"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
description = "Automatic ORM"

[lib]
name = "aromatic"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
envy = { workspace = true }
#migrations = { path = "migration" }