[package]
name = "orm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "orm"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
sqlx = "0.7.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-trait = "0.1.71"
envy = { path = "../envy" }