[package]
name = "orm"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "orm"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.71"
sqlx = { workspace = true}
futures = { workspace = true}
futures-util = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }
envy = { workspace = true }
